--- a/Ibox/.env
+++ b/Ibox/.env
@@ -1,1 +1,11 @@
 EXPO_GOOGLE_MAPS_API_KEY=AIzaSyAzPxqQ9QhUq_cmXkkcE-6DcgJn-EDngzI
+
+# Google OAuth Configuration
+# This Web Client ID is from your Firebase project (ibox-c36af)
+EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=79631645506-9jg545mflqfvl8v50lc1gsthj4cotsld.apps.googleusercontent.com
+
+# Backend API Configuration
+# For Android Emulator: use http://10.0.2.2:5000/api/v1
+# For iOS Simulator: use http://localhost:5000/api/v1
+# For Physical Device: use your computer's IP (e.g., http://192.168.1.14:5000/api/v1)
+EXPO_PUBLIC_API_URL=http://192.168.1.14:5000/api/v1
