--- a/Ibox/package.json
+++ b/Ibox/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
     "expo": "53.0.20",
+    "expo-auth-session": "^6.2.1",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "^14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
     "expo-font": "^13.3.1",
@@ -34,6 +36,7 @@
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-video": "~2.2.2",
+    "expo-web-browser": "^14.2.0",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
