--- a/Ibox/app.json
+++ b/Ibox/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "iBox",
     "slug": "ibox",
+    "scheme": "ibox",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
