--- a/Ibox/.env
+++ b/Ibox/.env
@@ -8,4 +8,4 @@ EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=79631645506-9jg545mflqfvl8v50lc1gsthj4cotsld.ap
 # For Android Emulator: use http://10.0.2.2:5000/api/v1
 # For iOS Simulator: use http://localhost:5000/api/v1
 # For Physical Device: use your computer's IP (e.g., http://192.168.1.14:5000/api/v1)
-EXPO_PUBLIC_API_URL=http://192.168.1.14:5000/api/v1
+# EXPO_PUBLIC_API_URL=http://192.168.1.14:5000/api/v1
