--- a/Ibox/package.json
+++ b/Ibox/package.json
@@ -33,6 +33,7 @@
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.1",
     "expo-maps": "~0.11.0",
+    "expo-network": "^7.1.5",
     "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-video": "~2.2.2",
