Refactor iBox app's signup flow and enhance user experience. Introduced modern signup screens, improved animations in AuthSelectionScreen, and updated IdentityScreen with new layout components. Enhanced API service for OTP handling and added new network configurations for better connectivity. Updated dependencies and refined input components for improved styling and functionality.

--- a/Ibox/app.json
+++ b/Ibox/app.json
@@ -16,7 +16,22 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-        "NSLocationWhenInUseUsageDescription": "This app uses location to provide better delivery services"
+        "NSLocationWhenInUseUsageDescription": "This app uses location to provide better delivery services",
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true,
+          "NSAllowsLocalNetworking": true,
+          "NSExceptionDomains": {
+            "192.168.1.12": {
+              "NSTemporaryExceptionAllowsInsecureHTTPLoads": true
+            },
+            "172.25.8.223": {
+              "NSTemporaryExceptionAllowsInsecureHTTPLoads": true
+            },
+            "localhost": {
+              "NSTemporaryExceptionAllowsInsecureHTTPLoads": true
+            }
+          }
+        }
       }
     },
     "android": {
