--- a/Ibox/package.json
+++ b/Ibox/package.json
@@ -9,60 +9,59 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
-    "expo": "53.0.20",
-    "expo-auth-session": "^6.2.1",
-    "expo-av": "~15.1.7",
-    "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.7",
-    "expo-crypto": "^14.1.5",
-    "expo-dev-client": "~5.2.4",
-    "expo-document-picker": "~13.1.6",
-    "expo-font": "^13.3.1",
-    "expo-haptics": "^14.1.4",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-location": "~18.1.1",
-    "expo-maps": "~0.11.0",
-    "expo-network": "^7.1.5",
-    "expo-router": "~5.1.4",
-    "expo-status-bar": "~2.2.3",
-    "expo-video": "~2.2.2",
-    "expo-web-browser": "^14.2.0",
+    "expo": "^54.0.7",
+    "expo-auth-session": "~7.0.8",
+    "expo-av": "~16.0.7",
+    "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.12",
+    "expo-document-picker": "~14.0.7",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-maps": "~0.12.7",
+    "expo-network": "~8.0.7",
+    "expo-router": "~6.0.4",
+    "expo-status-bar": "~3.0.8",
+    "expo-video": "~3.0.11",
+    "expo-web-browser": "~15.0.7",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "13.15.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
   },
+  "overrides": {
+    "react-dom": "19.1.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "react-native-dotenv": "^3.4.11",
-    "typescript": "~5.8.3"
-  },
-  "overrides": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
