--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,9 @@
     "mongoose": "^8.17.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.8",
+    "postmark": "^4.0.5",
     "redis": "^5.8.0",
     "socket.io": "^4.8.1"
   },
