Enhance iBox app with new driver-related screens and phone verification features. Added ModernDriverHomeScreen, DriverVerificationScreen, and related components to improve user experience for drivers. Updated navigation structure to include new screens and refined HomeScreen with phone verification logic. Enhanced API service for better handling of phone verification processes and integrated Twilio for SMS functionality. Updated dependencies and improved styling across various components.

--- a/backend/env.example
+++ b/backend/env.example
@@ -25,6 +25,11 @@ OTP_EXPIRY_MINUTES=5
 OTP_MAX_ATTEMPTS=3
 OTP_RATE_LIMIT_PER_HOUR=5
 
+# Twilio SMS Configuration
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_VERIFY_SERVICE_SID=your-twilio-verify-service-sid
+
 # Frontend URLs
 FRONTEND_URL=http://localhost:19006
 ADMIN_URL=http://localhost:3000
