--- a/Ibox/package.json
+++ b/Ibox/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -34,6 +34,7 @@
     "expo-location": "~19.0.7",
     "expo-maps": "~0.12.7",
     "expo-network": "~8.0.7",
+    "expo-notifications": "~0.32.11",
     "expo-router": "~6.0.4",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.11",
