--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "express-validator": "^7.2.0",
     "firebase-admin": "^13.4.0",
     "helmet": "^8.0.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.0",
@@ -47,7 +48,8 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^6.9.8",
     "postmark": "^4.0.5",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "twilio": "^5.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
