Implement comprehensive admin system for driver verification management in iBox app. Introduced an admin dashboard with real-time verification status tracking, approval workflows, and enhanced driver management features. Updated backend to support new admin routes and integrated real-time notifications for verification updates. Improved user experience with modern UI components and refined API services for driver document handling. Enhanced security features with role-based access and audit logging. Updated documentation to reflect new admin functionalities.

--- a/Ibox/app.json
+++ b/Ibox/app.json
@@ -3,6 +3,9 @@
     "name": "iBox",
     "slug": "ibox",
     "scheme": "ibox",
+    "linking": {
+      "schemes": ["ibox"]
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
@@ -14,6 +17,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
+      "bundleIdentifier": "com.yourcompany.ibox",
       "supportsTablet": true,
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app uses location to provide better delivery services",
@@ -35,6 +39,7 @@
       }
     },
     "android": {
+      "package": "com.yourcompany.ibox",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/logo-icon.png",
         "backgroundColor": "#ffffff"
