--- a/Ibox/package.json
+++ b/Ibox/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.4.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.57.4",
+    "better-auth": "^1.3.12",
     "expo": "^54.0.7",
     "expo-auth-session": "~7.0.8",
     "expo-av": "~16.0.7",
@@ -25,6 +27,7 @@
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.12",
     "expo-document-picker": "~14.0.7",
+    "expo-file-system": "^19.0.14",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image-manipulator": "~14.0.7",
@@ -49,10 +52,12 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.15.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.6.1"
   },
   "overrides": {
