--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -40,12 +41,16 @@
     "express-validator": "^7.2.0",
     "helmet": "^8.0.0",
     "ioredis": "^5.7.0",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.20.0",
     "mongoose": "^8.17.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^6.9.8",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "postmark": "^4.0.5",
     "socket.io": "^4.8.1",
     "twilio": "^5.9.0"
